# DEPRECATED_afb-aaaa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ALSA-afb/: Alsa-AddCtl.c  Alsa-ApiHat.c  Alsa-ApiHat.h  Alsa-RegEvt.c  Alsa-SetGet.c  Alsa-Ucm.c  AlsaCoreBinding.h  CMakeLists.txt  README.md
Alsa/: CMakeLists.txt
Alsa-Plugin/Alsa-Policy-Hook/: AlsaHookCb.c  CMakeLists.txt  PolicyHookCb.c  README.md
Alsa-Plugin/_Alsa-Hal-plugin/: AlsaHalPlug.h  AlsaHalPlugCb.c  AlsaHalPlugCtl.c  CMakeLists.txt  README.md
Alsa-afb/: Alsa-AddCtl.c  Alsa-ApiHat.c  Alsa-ApiHat.h  Alsa-RegEvt.c  Alsa-SetGet.c  Alsa-Ucm.c  CMakeLists.txt  README.md
Alsa/core-binding/: AlsaAfbBinding.c  AlsaLibMapping.c  AlsaLibMapping.h  README.md
AlsaSound/: CMakeLists.txt
AlsaSound/CoreBinding/: AlsaAfbBinding.c  AlsaCoreBinding.c  AlsaCoreBinding.h  AlsaCtlSetGet.c  AlsaLibMapping.c  AlsaLibMapping.h  AlsaUseCase.c  CMakeLists.txt  README.md
AlsaSound/HALayer/: CMakeLists.txt
AlsaSound/HALayer/IntelHda/: CMakeLists.txt  IntelHdaHAL.c
AlsaSound/HALayer/Shared/: CMakeLists.txt  SharedHalLib.c
AlsaSound/HALayer/SharedHal/: CMakeLists.txt  SharedHalLib.c  SharedHalLib.h
AlsaSound/HALayer/include/: AlsaHalCtls.h  AlsaHalIface.h  MiscHelpers.h
AlsaSound/HardAbsLayer/: CMakeLists.txt
AlsaSound/HardAbsLayer/IntelHda/: CMakeLists.txt  IntelHdaBinding.c  IntelHdaLib.c  IntelHdaLib.h
AlsaSound/include/: AlsaMixerHal.h
Audio-Common/: CMakeLists.txt  audio-common.c  audio-common.h  filescan-utils.c  filescan-utils.h
Audio-Interface/: audio-interface.c
AudioLogic/: AudioLogicBinding.c  AudioLogicLib.c  AudioLogicLib.h  CMakeLists.txt  README.md
BusinessLogic/: AudioLogicBinding.c  AudioLogicMapping.c  AudioLogicMapping.h  CMakeLists.txt  README.md
Common/: AudioCommonLib.c  AudioCommonLib.h  CMakeLists.txt
Controler-afb/: CMakeLists.txt  README.md  afb-control-afb.h  afb-control-afb.json  ctl-apidef.h  ctl-apidef.json  ctl-binding.c  ctl-binding.h  ctl-dispatch.c  ctl-events.c  ctl-lua.c  ctl-misc.c  ctl-plugin-sample.c  ctl-policy.c  ctl-timer.c
Controller-afb/: CMakeLists.txt  README.md  a.out  ctl-apidef.h  ctl-apidef.json  ctl-binding.c  ctl-binding.h  ctl-dispatch.c  ctl-lua.c  ctl-plugin-sample.c  ctl-timer.c
HAL-afb/: CMakeLists.txt
HAL-afb/HAL-interface/: CMakeLists.txt  hal-interface.c  hal-interface.h  hal-volmap.c  hal-volramp.c  hal-volume.c
HAL-afb/HAL-plugin/: CMakeLists.txt  HalPlug.h  HalPlugCb.c  HalPlugCtl.c
HAL-afb/HAL_MOST_UNICENS/: CMakeLists.txt  README.md  hal_most_unicens.c  wrap-json.h  wrap-json.md  wrap_unicens.c  wrap_unicens.h  wrap_volume.c  wrap_volume.h
HAL-afb/HAL_MOST_UNICENS/ucs2-vol/inc/: device_container.h  device_value.h  libmostvolume.h
HAL-afb/HAL_MOST_UNICENS/ucs2-vol/src/: device_container.cpp  device_value.cpp  libmostvolume.cpp  setup.cpp
HAL-afb/HDA-intel/: CMakeLists.txt  IntelHdaHAL.c
HAL-afb/Jabra-Solemate/: CMakeLists.txt  JabraUsbHAL.c
HAL-afb/Scarlett-Focusrite/: CMakeLists.txt  ScarlettUsbHAL.c
HAL-afb/Unicens-USB/: CMakeLists.txt  UnicensHAL.c  UnicensVol.c
HAL-afb/hal-most-unicens/: CMakeLists.txt  hal_most_unicens.c  wrap-json.c  wrap_unicens.c  wrap_unicens.h  wrap_volume.c  wrap_volume.h
HAL-afb/hal-most-unicens/ucs2-vol/inc/: device_value.h  setup.h
HAL-afb/hal-most-unicens/ucs2-vol/src/: device_container.cpp
HighLevel-afb/: CMakeLists.txt  HighLevelApiConf.c  HighLevelBinding.c  HighLevelBinding.h
PolicyCtl-afb/: CMakeLists.txt  polctl-apidef.h  polctl-apidef.json  polctl-binding.c
Shared-Interface/: CMakeLists.txt  audio-interface.c  audio-interface.h
conf.d/: CMakeLists.txt  config.cmake
conf.d/alsa/: asoundrc.sample
conf.d/alsa-sample/: asoundrc.sample
conf.d/cmake/: 00-debian-config.cmake  00-suse-config.cmake  config.cmake
conf.d/ctl-rules/: CMakeLists.txt  helloworld-lua-script.lua  onload-control-policy.json  onload-control-script.lua
conf.d/packaging/: audio-agent.dsc  audio-agent.spec  config.xml  debian.audio-agent.install  debian.changelog  debian.control  debian.rules
conf.d/private/: README-demo.md
conf.d/project/alsa.d/: asoundrc.sample
conf.d/project/config.d/: CMakeLists.txt  onload-audio-control.json
conf.d/project/json.d/: onload-aaaa-sample.json  onload-daemon-standalone.json
conf.d/project/lua.d/: CMakeLists.txt  README.md  doscript-helloworld.lua  onload-aaaa-00-utils.lua  onload-aaaa-01-controls.lua  onload-aaaa-01-init.lua  onload-aaaa-02-timer.lua  onload-aaaa-03-controls.lua  onload-aaaa-03-oncall.lua  onload-audio-controls.lua  onload-audio-oncall.lua  onload-audio-policy.lua  onload-audio-samples.lua  onload-audio-timer.lua  onload-audio-utils.lua
conf.d/project/lua.d/standalone-sample/: onload-daemon-01.lua
data/: CMakeLists.txt  default-control-policy.json  helloworld-lua-script.lua  onload-control-policy.json  onload-control-script.lua
etc/: config.cmake  macros.cmake
htdocs/: AFB-websock.js  AudioBinding.js  CMakeLists.txt  README.md  alsa-core.html  alsa-hal.html  audio-control.html  audio-logic.html  index.html
htdocs/docs/: AAAA-architecture.odg
nbproject/: configurations.xml  project.xml
packaging/wgt/: config.xml.in
